2011-04-12 Lucas
* Added default image into business configuration.

2011-03-29 Gabriel
* Add unit test to UNG Configurator

2011-03-28 Gabriel
* Add script to configure UNG Web Site

2011-03-24 Gabriel
* Initial commit.