@@ -1,3 +1,6 @@
+2011-08-04 Gabriel L. Oliveira
+* Fix proxy of transition's scripts
+
 2011-04-12 Lucas
 * Added default image into business configuration.
 
